# paper-chat

./: .env  .gitignore  Dockerfile  README.md  README_en.md  docker-compose.dev.yml  docker-compose.prd.yml  docker-compose.yml  elasticsearch.env  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json  postCreate.sh
.github/workflows/: tests.yml
configs/: agent.yml  elasticsearch.yml  llm.yml
notebooks/: playground.ipynb
notebooks/elasticsearch/: data.json  playground.ipynb  tutorial.ipynb
notebooks/experiments/multi-model/: playground.html  playground.ipynb
notebooks/feature/15-add-openai-LLM-adaptation/: playground.ipynb
notebooks/feature/20-improve-summary-performance/: grobid.ipynb  parsing_pdf.ipynb
notebooks/feature/5-add-summary-schema/: chain-of-density.ipynb
paper_chat/: agents.py  app.py
paper_chat/agents/: retrieval_agent_builder.py  retrieval_agent_executor.py
paper_chat/core/: __init__.py  configs.py  depth_logging.py  files.py  global_settings.py  llm.py  timer.py  utils.py
paper_chat/utils/: elasticsearch_manager.py  utils.py
scripts/: run.sh
